# algebra_worksheets

./: .bitrab-ci.yml  .gitignore  .pydoctest.json  .pylintrc_tests  CODE_OF_CONDUCT.md  Dockerfile  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  tox.ini
.bitrab-ci-scripts/: bandit.sh  check_docs.sh  lint.sh  mypy.sh  pytest.sh
.github/workflows/: build.yml  publish_to_pypi.yml  tox.yml
algebra_worksheets/: __about__.py  __init__.py  __main__.py  cli.py  compile.py  model.py
algebra_worksheets/generators/: substitution.py
algebra_worksheets/render/: latex.py
algebra_worksheets/render/templates/: answer_key.tex.j2  worksheet.tex.j2
docs/: installation.md
docs/extending/: CONTRIBUTING.md
docs/overview/: README.md
docs/usage/: quickstart.md
scripts/: basic_checks.sh  generate_answer_key.sh  generate_sample.sh  generate_source.sh  generate_worksheet.sh
spec/: roadmap.md
tests/: conftest.py  test_cli.py  test_generate_cli.py  test_latex.py  test_model.py  test_substitution.py
tests/golden/: answer_key.tex  worksheet.tex
